--- a/k8s布署/单机布署.md
+++ b/k8s布署/单机布署.md
@@ -1,11 +1,40 @@
 # Kubernetes 单机布署
+## 环境准备
++ ubuntu 20.04
++ /opt/k8s/
+  ```
+    ├── bin
+    │   ├── etcd
+    │   ├── etcdctl
+    │   ├── kubeadm
+    │   ├── kube-apiserver
+    │   ├── kube-controller-manager
+    │   ├── kubectl
+    │   ├── kubelet
+    │   ├── kube-proxy
+    │   └── kube-scheduler
+    ├── certs
+    ├── config
+    │   ├── admin.kubeconfig
+    │   ├── controller.kubeconfig
+    │   ├── kube-audit-policy-file
+    │   ├── kubelet.kubeconfig -> /opt/k8s/certs/kubelet.kubeconfig
+    │   ├── kubelet.yaml
+    │   ├── kube-proxy.yaml
+    │   ├── kube-scheduler.yaml
+    │   ├── rotated.kubeconfig
+    │   └── scheduler.kubeconfig
+    ├── etcd
+    ├── logs
+    └── static-pods
+  ```
 ## 准备工作:
 * 安装 openssl, cfssl 用于证书的制作
 * 安装 docker, 用于节点的容器的运行
 * 生成根证书
 
 _客户端根证书:_
-  >　openssl req -x509 -sha256 -new -nodes -days 365 -newkey rsa:2048 -keyout "client-ca.key" -out "client-ca.crt" -subj "/C=zh/ST=beijing/L=beijing/O=antiy/OU=antiy/CN=antiy/emailAddress=antiy.cn/"
+  >　openssl req -x509 -sha256 -new -nodes -days 365 -newkey rsa:2048 -keyout "client-ca.key" -out "client-ca.crt" -subj "/C=zh/ST=beijing/L=beijing/O=kubernetes/OU=kubernetes/CN=kubernetes/emailAddress=kubernetes.cn/"
   
 _证书配置文件, client_config.json_
 ```
@@ -24,7 +53,7 @@ _证书配置文件, client_config.json_
 ```
 
 _服务器端证书_
-  >　openssl req -x509 -sha256 -new -nodes -days 365 -newkey rsa:2048 -keyout "server-ca.key" -out "server-ca.crt" -subj "/C=zh/ST=beijing/L=beijing/O=antiy/OU=antiy/CN=antiy/emailAddress=antiy.cn/"
+  >　openssl req -x509 -sha256 -new -nodes -days 365 -newkey rsa:2048 -keyout "server-ca.key" -out "server-ca.crt" -subj "/C=zh/ST=beijing/L=beijing/O=kubernetes/OU=kubernetes/CN=kubernetes/emailAddress=kubernetes.cn/"
 
 _证书配置文件, server_config.json_
 ```
@@ -43,7 +72,7 @@ _证书配置文件, server_config.json_
 ```
 
 _请求头部证书_
->　openssl req -x509 -sha256 -new -nodes -days 365 -newkey rsa:2048 -keyout "request-ca.key" -out "request-ca.crt" -subj "/C=zh/ST=beijing/L=beijing/O=antiy/OU=antiy/CN=antiy/emailAddress=antiy.cn/"
+>　openssl req -x509 -sha256 -new -nodes -days 365 -newkey rsa:2048 -keyout "request-ca.key" -out "request-ca.crt" -subj "/C=zh/ST=beijing/L=beijing/O=kubernetes/OU=kubernetes/CN=kubernetes/emailAddress=kubernetes.cn/"
 
 _证书配置文件,　request_config.json_
 ```
@@ -61,7 +90,7 @@ _证书配置文件,　request_config.json_
 }
 ```
 __注意__
-以上三个证书,　可以分开生成,　也可以三合一共用一个,　如果三个一,　证书配置文件应为:
+以上三个证书,　可以分开生成,　也可以三合一共用一个,　如果三合一,　证书配置文件应为:
 ```
 {
     "signing": {
@@ -189,7 +218,7 @@ _１.　生成客户端证书_
 生成 request proxy证书 client-auth.json
 ```
 {
-    "CN": "antiy-proxy",
+    "CN": "kubernetes-proxy",
     "hosts": [""],
     "key": {
         "algo": "rsa",
@@ -220,7 +249,7 @@ rules:
 - level: Metadata
 ```
 __启动命令, 运行 kube-apiserver__
-> ./bin/kube-apiserver --authorization-mode=Node,RBAC  --cloud-provider= --cloud-config= --v=0 --v=3 --vmodule= --audit-policy-file=./config/kube-audit-policy-file --audit-log-path=./logs//kube-apiserver-audit.log --authorization-webhook-config-file= --authentication-token-webhook-config-file= --client-ca-file=./certs/client-ca.crt --kubelet-client-certificate=./certs/client-apiserver.pem --kubelet-client-key=./certs/client-apiserver-key.pem --service-account-key-file=./certs/serviceaccount.key --service-account-issuer=https://kubernetes.default.svc --service-account-signing-key-file=./certs/serviceaccount.key --enable-admission-plugins=NamespaceLifecycle,LimitRanger,ServiceAccount,DefaultStorageClass,DefaultTolerationSeconds,Priority,MutatingAdmissionWebhook,ValidatingAdmissionWebhook,ResourceQuota --bind-address=0.0.0.0 --secure-port=6443 --tls-cert-file=./certs/server-kube-apiserver.pem --tls-private-key-file=./certs/server-kube-apiserver-key.pem --etcd-servers=http://127.0.0.1:2379 --service-cluster-ip-range=10.0.0.0/24 --feature-gates=AllAlpha=false --external-hostname=localhost --requestheader-username-headers=X-Remote-User --requestheader-group-headers=X-Remote-Group --requestheader-extra-headers-prefix=X-Remote-Extra- --requestheader-client-ca-file=./certs/client-ca.crt --requestheader-allowed-names=antiy-proxy --proxy-client-cert-file=./certs/auth-proxy.pem --proxy-client-key-file=./certs/auth-proxy-key.pem –anonymous-auth=false
+> ./bin/kube-apiserver --authorization-mode=Node,RBAC  --cloud-provider= --cloud-config= --v=0 --v=3 --vmodule= --audit-policy-file=./config/kube-audit-policy-file --audit-log-path=./logs//kube-apiserver-audit.log --authorization-webhook-config-file= --authentication-token-webhook-config-file= --client-ca-file=./certs/client-ca.crt --kubelet-client-certificate=./certs/client-apiserver.pem --kubelet-client-key=./certs/client-apiserver-key.pem --service-account-key-file=./certs/serviceaccount.key --service-account-issuer=https://kubernetes.default.svc --service-account-signing-key-file=./certs/serviceaccount.key --enable-admission-plugins=NamespaceLifecycle,LimitRanger,ServiceAccount,DefaultStorageClass,DefaultTolerationSeconds,Priority,MutatingAdmissionWebhook,ValidatingAdmissionWebhook,ResourceQuota --bind-address=0.0.0.0 --secure-port=6443 --tls-cert-file=./certs/server-kube-apiserver.pem --tls-private-key-file=./certs/server-kube-apiserver-key.pem --etcd-servers=http://127.0.0.1:2379 --service-cluster-ip-range=10.0.0.0/24 --feature-gates=AllAlpha=false --external-hostname=localhost --requestheader-username-headers=X-Remote-User --requestheader-group-headers=X-Remote-Group --requestheader-extra-headers-prefix=X-Remote-Extra- --requestheader-client-ca-file=./certs/client-ca.crt --requestheader-allowed-names=kubernetes-proxy --proxy-client-cert-file=./certs/auth-proxy.pem --proxy-client-key-file=./certs/auth-proxy-key.pem –anonymous-auth=false
 
 __注意__ 因为使用了授权模式 基于 ServerAccount的RBAC, 所以在kube-apiserver启动后, 要增加角色绑定
 > kubectl create clusterrolebinding kube-apiserver-kubelet-admin --clusterrole=system:kubelet-api-admin --user=kube-apiserver
