增加集群布署

--- a/k8s布署/单机布署.md
+++ b/k8s布署/单机布署.md
@@ -127,7 +127,7 @@ __注意__
   }
   ```
   运行命令生成 admin.pem admin-key.pem
-  > cfssl gencert -ca=client-ca.crt -ca-key=client-ca.key -config=client-config.json client-admin.json|cfssljson bare admin
+  > cfssl gencert -ca=client-ca.crt -ca-key=client-ca.key -config=client-config.json client-admin.json|cfssljson -bare admin
 
   生成 admin.kubeconfig
   利用命令生成:
@@ -137,7 +137,7 @@ __注意__
 
   > kubectl config set-context kubernetes --cluster=kubernetes --user=kubernetes --kubeconfig=admin.kubeconfig
 
-  > kubectl config use-context kubernetes –kubeconfig=./admin.kubeconfig
+  > kubectl config use-context kubernetes --kubeconfig=./admin.kubeconfig
 
   此文件为kubectl 的配置文件, 使用方法:
   > 方法1  kubectl --kubeconfig=xxxx/admin.kubeconfig  xxx
@@ -183,7 +183,7 @@ _１.　生成客户端证书_
         {
             "C": "zh",
             "ST": "beijing",
-            "L": "anity"
+            "L": "beijing"
         }
     ]
 }
@@ -291,7 +291,7 @@ __注意__ 因为使用了授权模式 基于 ServerAccount的RBAC, 所以在kub
 
 > kubectl config set-context kubernetes --cluster=kubernetes --user=kubernetes --kubeconfig=controller.kubeconfig
 
-> kubectl config use-context kubernetes –kubeconfig=./controller.kubeconfig
+> kubectl config use-context kubernetes --kubeconfig=./controller.kubeconfig
 
 启动命令:
 > ./bin/kube-controller-manager --v=0 --vmodule= --service-account-private-key-file=./certs/serviceaccount.key --service-cluster-ip-range=10.0.0.0/24 --root-ca-file=./certs/server-ca.crt --cluster-signing-cert-file=./certs/client-ca.crt --cluster-signing-key-file=./certs/client-ca.key --enable-hostpath-provisioner=false --pvclaimbinder-sync-period=15s --feature-gates=AllAlpha=false --cloud-provider= --cloud-config= --kubeconfig ./config/controller.kubeconfig --use-service-account-credentials --controllers=* --leader-elect=false --cert-dir=./certs --master=https://127.0.0.1:6443
@@ -330,7 +330,7 @@ __注意__ 因为使用了授权模式 基于 ServerAccount的RBAC, 所以在kub
 
 > kubectl config set-context kubernetes --cluster=kubernetes --user=kubernetes --kubeconfig=scheduler.kubeconfig
 
-> kubectl config use-context kubernetes –kubeconfig=./scheduler.kubeconfig
+> kubectl config use-context kubernetes --kubeconfig=./scheduler.kubeconfig
 
 生成 kube-scheduler.yaml
 ```
@@ -377,7 +377,7 @@ leaderElection:
 
     > kubectl config set-context kubernetes --cluster=kubernetes --user=kubernetes --kubeconfig=kubelet.kubeconfig
 
-    > kubectl config use-context kubernetes –kubeconfig=./kubelet.kubeconfig
+    > kubectl config use-context kubernetes --kubeconfig=./kubelet.kubeconfig
 
   生成 kubelet.yaml
   ```
