增加集群布署

--- a/k8s布署/集群布署.md
+++ b/k8s布署/集群布署.md
@@ -354,7 +354,7 @@ leaderElection:
 
 将其中的type修改为NodePort, 并增加 spec/ports下, 增加 nodePort: 30443, 保存退出
 
-在浏览器内访问 https://localhost:30443 便可以看到 dashboard 页面
+在浏览器内访问 https://10.240.53.31:30443 便可以看到 dashboard 页面
 
 选择token访问, 运生命令:
 > kubectl -n kube-system describe $(kubectl -n kube-system get secret -n kube-system -o name | grep namespace) | grep token
