--- a/k8s布署/组件编译.md
+++ b/k8s布署/组件编译.md
@@ -33,6 +33,10 @@ git clone https://github.com/moby/moby.git
 mv moby docker
 cd docker
 ./hack/make.sh
+
+cd github.com/docker
+git clone https://github.com/docker/cli.git
+make binary
 ```
 
 ## ETCD
