增加部分源码阅读

--- a/k8s布署/组件编译.md
+++ b/k8s布署/组件编译.md
@@ -56,4 +56,15 @@ make
 ```
 git clone https://github.com/kubernetes/kubernetes.git
 make
+
+如果需要调试代码, 参考Makefile里的注释
+make all GOLDFLAGS=""
+
+将 -w -s 去掉, 这两个标志是去除调试符号的
+-s: 去掉符号信息。
+-w: 去掉DWARF调试信息。
+
+GOGCFLAGS="all=-N -l"
+禁止内联, 优化
+ -N参数代表禁止优化, -l参数代表禁止内联
 ```
