--- a/k8s源码分析/源码分析.md
+++ b/k8s源码分析/源码分析.md
@@ -1,6 +1,14 @@
 # kubernetes 结构分析
 [参考资源](https://blog.tianfeiyu.com/source-code-reading-notes)
 
+```
+● default：所有未指定命名空间的资源对象都会被分配给该命名空间。
+● kube-system：所有由Kubernetes系统创建的资源对象都会被分配给该命名空间。
+● kube-public：此命名空间下的资源对象可以被所有人访问（包括未认证用户）。
+● kube-node-lease：此命名空间下存放来自节点的心跳记录（节点租约信息）。
+```
+
+一个资源对象需要用5个字段来描述它，分别是Group/Version、Kind、MetaData、Spec、Status。这些字段定义在YAML或JSON文件中
 
 # kube-apiserver
 kube-apiserver 是 kubernetes 中与 etcd 直接交互的一个组件，其控制着 kubernetes 中核心资源的变化。它主要提供了以下几个功能：
